tried to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ h2 {
     text-align: center;
     font-size: 70px;
     margin-bottom: 0px;
-    line-height: 400px;
 }
 
 p1 {
